--- a/index.html
+++ b/index.html
@@ -12,6 +12,21 @@
       <button id="open-nav"></button>
       <button id="close-nav"></button>
     </div>
+    <div class="container">
+      <h1>Amazing Article</h1>
+      <small>Ameer Hamza</small>
+      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quaerat porro sapiente tempore veniam ratione inventore exercitationem numquam dignissimos. Fuga, enim dignissimos assumenda vitae molestias ullam, doloremque officia magni ea, facilis repellat. Eligendi fuga reprehenderit suscipit amet accusamus autem tenetur, similique ratione labore provident rem culpa! Cumque alias dolores saepe quisquam quos distinctio tempore perspiciatis laudantium praesentium neque accusamus ut necessitatibus corporis fugit impedit eum deleniti qui suscipit dolor repellat, ipsum illo. Culpa corporis provident voluptate nostrum mollitia architecto deleniti tenetur doloremque earum odit quam magni id fuga quis hic nihil pariatur iusto esse veniam excepturi nobis, omnis soluta. Facilis, nam.</p>
+      <h3>My Cat</h3>
+      <img src="https://images.unsplash.com/photo-1514888286974-6c03e2ca1dba?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=843&q=80" alt="A black and white cat staring at you">
+      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Delectus repudiandae omnis similique perspiciatis? Iure, ipsum! Doloribus provident, magnam nobis distinctio commodi hic tempora dolorum atque, deleniti, minima veniam nostrum reprehenderit maxime ad nam amet. Quaerat odio velit eligendi ipsa dignissimos fuga, excepturi tenetur assumenda dicta! Optio earum quidem sunt illo.</p>
+    </div>
+    <nav id="mynav">
+      <ul>
+        <li>Home</li>
+        <li>About</li>
+        <li>Contact</li>
+      </ul>
+    </nav>
     <script src="./index.js"></script>
   </body>
 </html>
